# IAPManager

./: .travis.yml  CMakeLists.txt  IAPManager.h  IAPManager.m  IAPManager.podspec  LICENSE  README.md
